# alint

./: .alint.yml  .dockerignore  .gitattributes  .github-account  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  RELEASING.md  action.yml  changelog.md  install.sh  manifest.json
crates/alint/: Cargo.toml
crates/alint-bench/: Cargo.toml
crates/alint-bench/benches/: blame_cache.rs  cross_file_rules.rs  dsl_extends.rs  fix_throughput.rs  glob_compile.rs  glob_match.rs  output_formats.rs  regex_content.rs  rule_engine.rs  single_file_rules.rs  structured_query.rs  walker.rs
crates/alint-bench/src/: lib.rs  tree.rs
crates/alint-cli/: Cargo.toml
crates/alint-cli/src/: main.rs
crates/alint-core/: Cargo.toml
crates/alint-core/src/: config.rs  engine.rs  error.rs  facts.rs  git.rs  level.rs  lib.rs  registry.rs  report.rs  rule.rs  scope.rs  scope_filter.rs  template.rs  walker.rs  when.rs
crates/alint-dsl/: Cargo.toml
crates/alint-dsl/rulesets/v1/: agent-context.yml  agent-hygiene.yml  go.yml  java.yml  monorepo.yml  node.yml  oss-baseline.yml  python.yml  rust.yml
crates/alint-dsl/rulesets/v1/ci/: github-actions.yml
crates/alint-dsl/rulesets/v1/compliance/: apache-2.yml  reuse.yml
crates/alint-dsl/rulesets/v1/docs/: adr.yml
crates/alint-dsl/rulesets/v1/hygiene/: lockfiles.yml  no-tracked-artifacts.yml
crates/alint-dsl/rulesets/v1/monorepo/: cargo-workspace.yml  pnpm-workspace.yml  yarn-workspace.yml
crates/alint-dsl/rulesets/v1/tooling/: editorconfig.yml
crates/alint-dsl/schemas/v1/: config.json
crates/alint-dsl/src/: bundled.rs  lib.rs
crates/alint-dsl/src/extends/: cache.rs  fetcher.rs  mod.rs  sri.rs
crates/alint-dsl/tests/: default_options_snapshot.rs  schema.rs
crates/alint-dsl/tests/fixtures/: all_kinds.yaml
crates/alint-dsl/tests/snapshots/: default_options.txt
crates/alint-e2e/: Cargo.toml
crates/alint-e2e/scenarios/check/bundled-compliance/: apache_2_happy_path.yml  apache_2_missing_notice.yml  apache_2_missing_source_header.yml  reuse_happy_path.yml  reuse_missing_licenses_dir.yml  (+1 more)
crates/alint-e2e/scenarios/fix/: file_append.yml  file_create.yml  file_prepend.yml  file_remove.yml  file_rename.yml  final_newline.yml  line_endings.yml  max_consecutive_blank_lines.yml  no_bidi_controls.yml  no_bom.yml  no_empty_files.yml  no_submodules.yml  no_trailing_whitespace.yml  no_zero_width_chars.yml  size_limit_skips_large_files.yml
crates/alint-e2e/src/: lib.rs
crates/alint-e2e/tests/: command_plugin.rs  coverage_audit.rs  coverage_audit_bench_listing.rs  coverage_audit_bundled_rulesets.rs  coverage_audit_cross_file_dispatch.rs  coverage_audit_engine_when_dispatch.rs  coverage_audit_git_modes.rs  coverage_audit_git_tracked_only.rs  coverage_audit_pass_fail.rs  coverage_audit_scope_owns_filter.rs  coverage_audit_when_wiring.rs  invariants.rs  scenarios.rs  unix_metadata.rs
crates/alint-output/: Cargo.toml
crates/alint-output/src/: agent.rs  github.rs  gitlab.rs  human.rs  json.rs  junit.rs  lib.rs  markdown.rs  sarif.rs  style.rs
crates/alint-output/tests/: cross_formatter.rs  fix_report_schema.rs
crates/alint-rules/: Cargo.toml
crates/alint-rules/src/: case.rs  command.rs  commented_out_code.rs  dir_absent.rs  dir_contains.rs  dir_exists.rs  dir_only_contains.rs  every_matching_has.rs  executable_bit.rs  executable_has_shebang.rs  file_absent.rs  file_content_forbidden.rs  file_content_matches.rs  file_ends_with.rs  file_exists.rs  file_footer.rs  file_hash.rs  file_header.rs  file_is_ascii.rs  file_is_text.rs  file_max_lines.rs  file_max_size.rs  file_min_lines.rs  file_min_size.rs  file_shebang.rs  file_starts_with.rs  filename_case.rs  filename_regex.rs  final_newline.rs  fixers.rs  for_each_dir.rs  for_each_file.rs  git_blame_age.rs  git_commit_message.rs  git_no_denied_paths.rs  indent_style.rs  io.rs  json_schema_passes.rs  lib.rs  line_endings.rs  (+20 more)
crates/alint-rules/tests/: git_blame_age.rs  scope_filter_integration.rs  shell_out_rules.rs
crates/alint-testkit/: Cargo.toml  TREE_SPEC.md
crates/alint-testkit/src/: error.rs  lib.rs  runner.rs  scenario.rs  strategies.rs
crates/alint-testkit/src/treespec/: extract.rs  materialize.rs  mod.rs  spec.rs  verify.rs
crates/alint/src/: init.rs  main.rs  progress.rs
crates/alint/src/export_agents_md/: markdown.rs  mod.rs  splice.rs
crates/alint/src/suggest/: mod.rs  output.rs  proposal.rs  scan.rs
crates/alint/tests/: cli.rs  cli_flag_inventory.rs  pty_color.rs
crates/alint/tests/cli/: agent-format.stdout  agent-format.toml  check-changed-non-git.stderr  check-changed-non-git.toml  check-clean.stdout  check-clean.toml  check-config-file-missing.stderr  check-config-file-missing.toml  check-fail-on-warning-exit.toml  check-malformed-config.stderr  check-malformed-config.toml  check-violates.stdout  check-with-extends.stdout  check-with-extends.toml  cliclor-force-emits-on-non-tty.stdout  cliclor-force-emits-on-non-tty.toml  color-always-overrides-no-color.toml  color-always-passes-through.toml  color-never-overrides-cliclor-force.toml  color-never-strips-ansi.toml  compact-format.stdout  compact-format.toml  explain-unknown-rule.stderr  explain-unknown-rule.toml  explain.stdout  explain.toml  export-agents-md-markdown.stdout  export-agents-md-markdown.toml  facts-empty.stdout  facts-json.stdout  facts-json.toml  facts.stdout  facts.toml  fail-on-warning-triggers.stdout  fail-on-warning-triggers.toml  fix-apply.stdout  fix-apply.toml  fix-dry-run.stdout  fix-dry-run.toml  fix-file-append.stdout  (+59 more)
crates/alint/tests/snapshots/: cli-flags.txt
xtask/: Cargo.toml
xtask/scripts/: consolidate-bench.py  render-history.py
xtask/src/: bench_config.yml  main.rs
xtask/src/bench/: compare.rs  docker.rs  fingerprint.rs  mod.rs  tools.rs
xtask/src/bench/scenarios/: s10_scope_filter_outside_per_file.yml  s1_filename.yml  s2_existence_content.yml  s3_workspace.yml  s4_agent_hygiene.yml  s5_fix_pass.yml  s6_per_file_content.yml  s7_cross_file_relational.yml  s8_git_overlay.yml  s9_nested_polyglot.yml
(+4045 files in other folders)
