[workspace]
resolver = "3"
members = [
    "crates/alint-core",
    "crates/alint-dsl",
    "crates/alint-rules",
    "crates/alint-output",
    "crates/alint-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/asamarts/alint"
authors = ["alint contributors"]

[workspace.dependencies]
alint-core = { path = "crates/alint-core", version = "0.1.0" }
alint-dsl = { path = "crates/alint-dsl", version = "0.1.0" }
alint-rules = { path = "crates/alint-rules", version = "0.1.0" }
alint-output = { path = "crates/alint-output", version = "0.1.0" }

thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
globset = "0.4"
ignore = "0.4"
regex = "1"
rayon = "1"
clap = { version = "4", features = ["derive", "cargo", "env"] }
miette = { version = "7", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
content_inspector = "0.2"
anyhow = "1"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
