[workspace]
resolver = "3"
members = [
    "crates/alint-core",
    "crates/alint-dsl",
    "crates/alint-rules",
    "crates/alint-output",
    "crates/alint",
    "crates/alint-bench",
    "crates/alint-testkit",
    "crates/alint-e2e",
    "xtask",
]
# `cargo run` without -p defaults to the CLI; xtask is explicit-only.
default-members = ["crates/alint"]

[workspace.package]
version = "0.4.4"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/asamarts/alint"
authors = ["alint contributors"]

[workspace.dependencies]
alint-core = { path = "crates/alint-core", version = "0.4.4" }
alint-dsl = { path = "crates/alint-dsl", version = "0.4.4" }
alint-rules = { path = "crates/alint-rules", version = "0.4.4" }
alint-output = { path = "crates/alint-output", version = "0.4.4" }
alint-bench = { path = "crates/alint-bench", version = "0.4.4" }
alint-testkit = { path = "crates/alint-testkit", version = "0.4.4" }

thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
globset = "0.4"
ignore = "0.4"
regex = "1"
rayon = "1"
clap = { version = "4", features = ["derive", "cargo", "env"] }
miette = { version = "7", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
content_inspector = "0.2"
anyhow = "1"
jsonschema = { version = "0.29", default-features = false }
criterion = "0.8"
rand = "0.9"
rand_chacha = "0.9"
tempfile = "3"
dir-test = "0.4"
proptest = "1"
trycmd = "0.15"
ureq = { version = "3", default-features = false, features = ["rustls"] }
sha2 = "0.10"
directories = "6"
anstyle = "1"
anstream = "0.6"
supports-hyperlinks = "3"
terminal_size = "0.4"
serde_json_path = "0.7"
toml = "0.9"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
