[package]
name = "xtask"
description = "Cargo-xtask helpers for alint (bench, release, etc.)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
alint-bench.workspace = true
alint-core.workspace = true
alint-rules.workspace = true
anyhow.workspace = true
clap.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true

[lints]
workspace = true
