[package]
name = "alint-bench"
description = "Benchmark harness and deterministic fixture generator for alint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
bench = false

[features]
default = []
# Filesystem-walking benches are feature-gated because they are inherently
# noisier than the pure-CPU benches — useful for characterizing, not gating.
fs-benches = []

[[bench]]
name = "glob_compile"
harness = false

[[bench]]
name = "glob_match"
harness = false

[[bench]]
name = "regex_content"
harness = false

[[bench]]
name = "rule_engine"
harness = false

[[bench]]
name = "walker"
harness = false
required-features = ["fs-benches"]

[[bench]]
name = "single_file_rules"
harness = false
required-features = ["fs-benches"]

[[bench]]
name = "cross_file_rules"
harness = false

[[bench]]
name = "output_formats"
harness = false

[[bench]]
name = "fix_throughput"
harness = false
required-features = ["fs-benches"]

[[bench]]
name = "dsl_extends"
harness = false
required-features = ["fs-benches"]

[dependencies]
alint-core.workspace = true
alint-dsl.workspace = true
alint-output.workspace = true
alint-rules.workspace = true
rand.workspace = true
rand_chacha.workspace = true
tempfile.workspace = true

[dev-dependencies]
criterion.workspace = true
regex.workspace = true
globset.workspace = true

[lints]
workspace = true
