[package]
name = "alint-core"
description = "Core types and execution engine for alint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
globset.workspace = true
ignore.workspace = true
rayon.workspace = true
tracing.workspace = true

[lints]
workspace = true
