[package]
name = "alint-dsl"
description = "Internal: YAML DSL loader for alint configuration files. Not a stable public API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/asamarts/alint"
readme = "../../README.md"
authors.workspace = true
# Internal crate — implementation detail of the alint binary.
# Historical versions ship to crates.io; new versions are gated
# off here. Defense-in-depth past `release.yml`'s allowlist.
publish = false

[dependencies]
alint-core.workspace = true
directories.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
ureq.workspace = true

[dev-dependencies]
alint-rules.workspace = true
jsonschema.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
