[package]
name = "alint-dsl"
description = "Internal: YAML DSL loader for alint configuration files. Not a stable public API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/asamarts/alint"
readme = "../../README.md"
authors.workspace = true
# Implementation-detail crate of the alint binary, but cargo
# requires every workspace dep of a published crate to have a
# resolvable `version =` on crates.io. So this crate publishes
# to crates.io even though its description warns "Internal: Not
# a stable public API." We attempted `publish = false` in the
# v0.8 audit (commits 87462c3 + 794b954); the v0.8.0 release
# pipeline failed at `cargo publish -p alint` because alint's
# manifest depends on this crate at the workspace version,
# unresolvable from crates.io. Reverted in v0.8.1.

[dependencies]
alint-core.workspace = true
directories.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
sha2.workspace = true
thiserror.workspace = true
tracing.workspace = true
ureq.workspace = true

[dev-dependencies]
alint-rules.workspace = true
jsonschema.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
