[package]
name = "alint-e2e"
description = "Internal: end-to-end scenario tests for alint. Not a library."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]

[dev-dependencies]
alint-core.workspace = true
alint-dsl.workspace = true
alint-rules.workspace = true
alint-testkit.workspace = true
dir-test.workspace = true
proptest.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true

[lints]
workspace = true
