[package]
name = "alint-output"
description = "Internal: output formatters for alint reports (human, json, ...). Not a stable public API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/asamarts/alint"
readme = "../../README.md"
authors.workspace = true
# Internal crate — implementation detail of the alint binary.
# Historical versions ship to crates.io; new versions are gated
# off here. Defense-in-depth past `release.yml`'s allowlist.
publish = false

[dependencies]
alint-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
anstyle.workspace = true
anstream.workspace = true

[dev-dependencies]
jsonschema.workspace = true

[lints]
workspace = true
