[package]
name = "alint-output"
description = "Internal: output formatters for alint reports (human, json, ...). Not a stable public API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/asamarts/alint"
readme = "../../README.md"
authors.workspace = true
# Implementation-detail crate of the alint binary, but cargo
# requires every workspace dep of a published crate to have a
# resolvable `version =` on crates.io. So this crate publishes
# even though its description warns "Internal: Not a stable
# public API." See alint-dsl/Cargo.toml for the v0.8 history.

[dependencies]
alint-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
anstyle.workspace = true
anstream.workspace = true

[dev-dependencies]
jsonschema.workspace = true

[lints]
workspace = true
