[package]
name = "alint-rules"
description = "Internal: built-in rule implementations for alint. Not a stable public API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/asamarts/alint"
readme = "../../README.md"
authors.workspace = true

[dependencies]
alint-core.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
regex.workspace = true
globset.workspace = true
content_inspector.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
