[package]
name = "alint-rules"
description = "Internal: built-in rule implementations for alint. Not a stable public API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/asamarts/alint"
readme = "../../README.md"
authors.workspace = true
# Internal crate — implementation detail of the alint binary.
# Historical versions ship to crates.io; new versions are gated
# off here. Defense-in-depth past `release.yml`'s allowlist.
publish = false

[dependencies]
alint-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
regex.workspace = true
globset.workspace = true
content_inspector.workspace = true
sha2.workspace = true
serde_json_path.workspace = true
toml.workspace = true
jsonschema.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
