[package]
name = "alint-testkit"
description = "Internal: end-to-end scenario fixtures + tree-spec utilities for alint's own tests. Not a stable public API."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
alint-core.workspace = true
alint-dsl.workspace = true
alint-rules.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
tempfile.workspace = true
thiserror.workspace = true

[lints]
workspace = true
