[package]
name = "alint"
description = "Language-agnostic linter for repository structure, file existence, filename conventions, and file content rules."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://github.com/asamarts/alint"
readme = "../../README.md"
keywords = ["linter", "policy", "repository", "structure", "cli"]
categories = ["development-tools", "command-line-utilities"]
authors.workspace = true

[[bin]]
name = "alint"
path = "src/main.rs"

[dependencies]
alint-core.workspace = true
alint-dsl.workspace = true
alint-rules.workspace = true
alint-output.workspace = true
anyhow.workspace = true
clap.workspace = true
miette.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
